...
        while index < operations.count - 1 {
            if operations.contains("×") || operations.contains("÷") {
                if operations[index] == "×" {
                    executeOperation(.multiplication)
                } else if operations[index] == "÷" {
                    if isImpossibleToDivide {
                        return (false, "Impossible de diviser par 0 !")
                    } else {
                        executeOperation(.division)
                    }
                }
            } else {
                if operations[index] == "+" {
...
